# coursera-ibm-devops-capstone

./: README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: ci-build.yaml
deploy/: deployment.yaml
service/: __init__.py  routes.py
tekton/: pipeline.yaml  tasks.yaml
tests/: test_routes.py
