[project]
name = "coursera-ibm-devops-capstone"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black==22.3.0",
    "coverage==6.3.2",
    "factory-boy==2.12.0",
    "flake8==4.0.1",
    "flask==2.1.2",
    "flask-cors>=6.0.1",
    "flask-sqlalchemy==2.5.1",
    "flask-talisman>=1.1.0",
    "gunicorn==20.1.0",
    "honcho==1.1.0",
    "httpie==3.2.1",
    "nose==1.3.7",
    "pinocchio==0.4.3",
    "psycopg2-binary==2.9.3",
    "pylint==2.14.0",
    "python-dotenv==0.20.0",
    "sqlalchemy==1.4.46",
    "werkzeug==2.1.2",
]
